LOD will display wrong LOD level object if zoomed out then in #44448

Closed
opened 2015-04-19 11:32:33 +02:00 by Thomas Szepe · 9 comments
Member

System Information
Windows 7 64bit, Nvidia Geforce GTX 460

Blender Version
Tested with Blender 2.74 [000dfc0] and custom build from master.

Short description of error
It looks like, if you zoomed in the actual LOD level object will replaced first with the lod 0 object.
After the second viewport update the object will be replaced with the correct LOD level object.

Exact steps for others to reproduce the error
Open the test file and zoom out and then zoom in with the mouse wheel.
Updating the viewport by selecting the viewport with left mouse button (moving cursor) will replace the LOD object with the correct one.

LOD_viewport_update.png
LOD.blend

**System Information** Windows 7 64bit, Nvidia Geforce GTX 460 **Blender Version** Tested with Blender 2.74 [000dfc0] and custom build from master. **Short description of error** It looks like, if you zoomed in the actual LOD level object will replaced first with the lod 0 object. After the second viewport update the object will be replaced with the correct LOD level object. **Exact steps for others to reproduce the error** Open the test file and zoom out and then zoom in with the mouse wheel. Updating the viewport by selecting the viewport with left mouse button (moving cursor) will replace the LOD object with the correct one. ![LOD_viewport_update.png](https://archive.blender.org/developer/F164363/LOD_viewport_update.png) [LOD.blend](https://archive.blender.org/developer/F164365/LOD.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Daniel Stokes was assigned by Thomas Szepe 2015-04-19 11:32:33 +02:00
Author
Member

Added subscriber: @hg1

Added subscriber: @hg1
Author
Member

edited projects, added Game Engine; removed BF Blender.

LOD was implemented for the game engine, but there is no bug in the game engine. It is a bug in the Blender viewport.

> edited projects, added Game Engine; removed BF Blender. LOD was implemented for the game engine, but there is no bug in the game engine. It is a bug in the Blender viewport.
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Are you sure this is a viewport bug? I mean have you debugged it? My first guess would be a mistake in the data handling, maybe with Object->currentlod. Of course it could be an OGL issue, but I doubt this is the case since we didn't get any similar non-LOD-related bugs in recently (well that still isn't a proof it's not a viewport bug, just trying to say it sounds rather unlikely for now).
And also it seems to me the LOD processing code is in the game engine code, isolated from Blender's main code.

Are you sure this is a viewport bug? I mean have you debugged it? My first guess would be a mistake in the data handling, maybe with `Object->currentlod`. Of course it could be an OGL issue, but I doubt this is the case since we didn't get any similar non-LOD-related bugs in recently (well that still isn't a proof it's not a viewport bug, just trying to say it sounds rather unlikely for now). And also it seems to me the LOD processing code is in the game engine code, isolated from Blender's main code.
Author
Member

No I don't debugged it. I only made some tests with the test file.
But I am pretty sure the the fault is in the viewport render code and not in the BGE code. Because there is not the same bug in the BGE and as the LOD processing code in the game engine ( KX_GameObject::UpdateLod), is isolated from LOD processing for the Blender viewport (view3d_draw.c BKE_object_lod_update; object.c lod_level_select).
I also don't think it is a OGL bug, because it will work in the BGE. But I am not sure at this point.

No I don't debugged it. I only made some tests with the test file. But I am pretty sure the the fault is in the viewport render code and not in the BGE code. Because there is not the same bug in the BGE and as the LOD processing code in the game engine ( KX_GameObject::UpdateLod), is isolated from LOD processing for the Blender viewport (view3d_draw.c BKE_object_lod_update; object.c lod_level_select). I also don't think it is a OGL bug, because it will work in the BGE. But I am not sure at this point.
Member

Added subscriber: @JorgeBernalMartinez

Added subscriber: @JorgeBernalMartinez

This issue was referenced by 9eb7eb5379

This issue was referenced by 9eb7eb5379cdb2f8584aa90d0bec0ffef2f91023
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44448
No description provided.