BGE: Fix T44448: LOD will display wrong LOD level object if zoomed out then in

Current object distance hasn't to be cached.